# portfolio_report_agent

./: .gitignore  .~lock.portfolio_analysis_report.docx#  portfolio_analysis_report.docx  portfolio_analysis_report.json  pyproject.toml
langgraph_agent/: README.md  portfolio_analysis_report.json  run_agent.py
langgraph_agent/data/: MIS sample CSV.csv
langgraph_agent/data/PayTm/: PayTM KPIs Mar 2025.csv
langgraph_agent/docs/: caching.md  prd.md
langgraph_agent/reports/: sample_report.html
langgraph_agent/src/: run_agent.py  state.py
langgraph_agent/src/agents/: extractor.py  graph_generator.py  reviewer.py  table_generator.py  writer.py
langgraph_agent/src/graphs/: main_graph.py
langgraph_agent/src/utils/: report_generator.py
langgraph_agent/src/utils/templates/: report_template.html
langgraph_agent/src/utils/templates/widgets/: _chart.html
