[project]
name = "portfolio-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Ausang Shukla",email = "thimmaiah@gmail.com"}
]
readme = "langgraph_agent/README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-community",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-google-genai",
    "langchain-google-vertexai",
    "pandas (>=2.2.2,<3.0.0)",
    "PyPDF2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "markdown (>=3.6,<4.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "langgraph_agent/src" }
]
